# network-traffic-anomaly-detection

./: .gitignore  README.md  ai_agent.py  api.py  database.py  docker-compose.yml  ecod_manual.ipynb  inference.py  monitor.py  requirements.txt  response.py
.claude/: settings.local.json
dashboard-ui/: index.html  package-lock.json  package.json
dashboard-ui/src/: App.css  App.jsx  index.css
dashboard-ui/src/components/: Navbar.jsx  NetworkTopology.jsx
dashboard-ui/src/hooks/: usePolling.js
dashboard-ui/src/pages/: Dashboard.jsx  Devices.jsx  Incidents.jsx
dashboard-ui/src/utils/: countryDisplay.js
docker/auth_server/: Dockerfile  start.sh  traffic_normal.sh
docker/dns_server/: Dockerfile  dnsmasq.conf  dnsmasq.hosts  start.sh
docker/external_attacker/: Dockerfile
docker/gateway/: Dockerfile  start.sh  traffic_normal.sh
docker/iot_sensor/: Dockerfile  traffic_normal.sh
docker/smart_camera/: Dockerfile  normal.sh  start.sh
docker/smart_plug/: Dockerfile  normal.sh
docker/smart_plug/attack/: bruteforce.sh  ddos.sh  portscan.sh
docker/web_server/: Dockerfile  firmware_check.json  start.sh  traffic_normal.sh
extractor/: CMakeLists.txt
extractor/src/: csv_writer.c  csv_writer.h  flow_table.c  flow_table.h  graph_window.c  graph_window.h  main.c  packet_parser.c  packet_parser.h
models/: registry.json
models/auth_server/: metadata.json
models/gateway/: metadata.json
models/iot_sensor/: metadata.json
models/smart_camera/: metadata.json
models/smart_plug/: metadata.json
models/web_server/: metadata.json
